Local hardhat networks deploy

--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,7 @@ node_modules
 
 # Hardhat files
 /cache
-/artifacts
+/packages/artifacts
 
 # TypeChain files
 /typechain
@@ -108,3 +108,5 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+tsconfig.tsbuildinfo
