--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "liquid-terminator",
+  "name": "@liquidity_lab/liquid-terminator",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "main": "index.js",
   "engines": {
     "node": ">= 22"
   },
   "scripts": {
+    "build": "tsc --build",
     "start": "npx tsx src/index.ts",
     "start-node": "npx hardhat node --fork https://arbitrum-mainnet.infura.io/v3/f89c7e42fab643f39c457ceeb4d63acd",
     "test": "echo \"Error: no test specified\" && exit 0"
@@ -16,14 +18,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@ava/typescript": "5.0.0",
     "@eslint/js": "9.2.0",
-    "@nomicfoundation/hardhat-toolbox": "5.0.0",
+    "@fast-check/ava": "1.2.1",
     "@tsconfig/node22": "22.0.0",
+    "@types/jest": "29.5.12",
     "@types/node": "20.12.11",
+    "ava": "6.1.3",
+    "ava-fast-check": "6.0.0",
+    "dotenv-cli": "7.4.2",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "hardhat": "2.22.3",
+    "fast-check": "3.19.0",
+    "jest": "29.7.0",
     "prettier": "3.2.5",
+    "ts-jest": "29.1.4",
     "tslib": "2.6.2",
     "tsx": "4.9.3",
     "typescript": "5.4.5",
@@ -32,10 +41,15 @@
   "dependencies": {
     "@uniswap/sdk-core": "5.0.0",
     "@uniswap/v3-sdk": "3.11.2",
-    "effect": "3.1.2",
-    "ethers": "6.12.1",
+    "bigdecimal.js": "1.3.1",
+    "effect": "3.2.5",
     "jsbi": "3.2.5",
-    "kafkajs": "^2.2.4",
+    "kafkajs": "2.2.4",
     "type-fest": "4.18.2"
-  }
+  },
+  "workspaces": [
+    "packages/localnet",
+    "packages/uniswap",
+    "packages/sol-artifacts"
+  ]
 }
