--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "effect": "3.1.2",
     "ethers": "6.12.1",
     "jsbi": "3.2.5",
+    "kafkajs": "^2.2.4",
     "type-fest": "4.18.2"
   }
 }
