--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "npx tsx src/index.ts",
+    "start-node": "npx hardhat node --fork https://arbitrum-mainnet.infura.io/v3/f89c7e42fab643f39c457ceeb4d63acd",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [],
@@ -31,6 +32,9 @@
   "dependencies": {
     "@uniswap/sdk-core": "5.0.0",
     "@uniswap/v3-sdk": "3.11.2",
-    "effect": "3.1.2"
+    "effect": "3.1.2",
+    "ethers": "6.12.1",
+    "jsbi": "3.2.5",
+    "type-fest": "4.18.2"
   }
 }
