--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@liquidity_lab/liquid-terminator",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "main": "index.js",
   "engines": {
     "node": ">= 22"
@@ -21,6 +20,7 @@
     "@ava/typescript": "5.0.0",
     "@eslint/js": "9.2.0",
     "@fast-check/ava": "1.2.1",
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@tsconfig/node22": "22.0.0",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.11",
@@ -39,6 +39,7 @@
     "typescript-eslint": "7.8.0"
   },
   "dependencies": {
+    "@arbitrum/token-bridge-contracts": "1.2.3",
     "@uniswap/sdk-core": "5.0.0",
     "@uniswap/v3-sdk": "3.11.2",
     "bigdecimal.js": "1.3.1",
@@ -48,8 +49,7 @@
     "type-fest": "4.18.2"
   },
   "workspaces": [
-    "packages/localnet",
-    "packages/uniswap",
-    "packages/sol-artifacts"
+    "packages/sol-artifacts",
+    "packages/effect-crypto"
   ]
 }
