Basic CI for typescript (#7)
fixed tests pipeline

--- a/packages/effect-crypto/package.json
+++ b/packages/effect-crypto/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "test": "npm run build && npx ava"
+    "test": "npx ava --timeout 2m"
   },
   "author": "",
   "license": "ISC",
