[HUGE] Refactoring of `crypto` package, `TxTag` deprecated mostly everywhere, new deploy API (WIP), rewamped `TestEnv` API, now it look SO USER FRIENDLY

--- a/packages/effect-crypto/package.json
+++ b/packages/effect-crypto/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@uniswap/sdk-core": "5.0.0",
+    "@uniswap/v3-periphery": "1.4.4",
     "@ava/typescript": "5.0.0",
     "@fast-check/ava": "1.2.1",
     "@tsconfig/node22": "22.0.0",
