--- a/packages/effect-crypto/tsconfig.json
+++ b/packages/effect-crypto/tsconfig.json
@@ -7,7 +7,8 @@
   ],
   "exclude": [
     "node_modules/**/*",
-    "dist/**/*"
+    "dist/**/*",
+    "src/**/*.compileerror.spec.ts"
   ],
   "compilerOptions": {
     "rootDir": "./src",
