--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,6 @@
     // examples, and because it is not a recommended rule, you should either
     // disable it, or understand what it enforces.
     // https://typescript-eslint.io/rules/explicit-function-return-type/
-    "@typescript-eslint/explicit-function-return-type": "warn",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": [
       "error",
@@ -40,7 +39,8 @@
         "functions": false
       }
     ],
-    "@typescript-eslint/explicit-function-return-type": "error"
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "overrides": [
     {
