--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,14 +23,14 @@
     "prettier"
   ],
   "ignorePatterns": [
-    "./packages/*/jest.config.js"
+    "./packages/*/jest.config.js",
+    "./packages/*/ava.config.mjs"
   ],
   "rules": {
     // The following rule is enabled only to supplement the inline suppression
     // examples, and because it is not a recommended rule, you should either
     // disable it, or understand what it enforces.
     // https://typescript-eslint.io/rules/explicit-function-return-type/
-    "@typescript-eslint/explicit-function-return-type": "warn",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": [
       "error",
@@ -39,7 +39,8 @@
         "functions": false
       }
     ],
-    "@typescript-eslint/explicit-function-return-type": "error"
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "overrides": [
     {
