--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "codestyle": "prettier --check \"packages/**/*.{ts,tsx,js,jsx}\"",
-    "lint": "eslint \"packages/**/*.{ts,tsx,js,jsx}\" --format stylish",
+    "codestyle": "prettier --check \"packages/**/*.{ts,tsx}\"",
+    "lint": "eslint \"packages/**/*.{ts,tsx}\" --format stylish",
     "start": "npx tsx src/index.ts",
     "start-node": "npx hardhat node --fork https://arbitrum-mainnet.infura.io/v3/f89c7e42fab643f39c457ceeb4d63acd",
     "test": "echo \"Error: no test specified\" && exit 0"
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "@arbitrum/token-bridge-contracts": "1.2.3",
+    "@uniswap/v3-core": "1.0.1",
+    "@uniswap/v3-periphery": "1.4.4",
     "@uniswap/sdk-core": "5.0.0",
     "@uniswap/v3-sdk": "3.11.2",
     "bigdecimal.js": "1.3.1",
