--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "devDependencies": {
     "@ava/typescript": "5.0.0",
+    "@arbitrum/token-bridge-contracts": "1.2.3",
     "@effect/eslint-plugin": "0.2.0",
     "@eslint/js": "9.2.0",
     "@fast-check/ava": "1.2.1",
@@ -27,6 +28,10 @@
     "@tsconfig/node22": "22.0.0",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.11",
+    "@uniswap/sdk-core": "5.0.0",
+    "@uniswap/v3-core": "1.0.1",
+    "@uniswap/v3-periphery": "1.4.4",
+    "@uniswap/v3-sdk": "3.11.2",
     "ava": "6.1.3",
     "ava-fast-check": "6.0.0",
     "dotenv-cli": "7.4.2",
@@ -42,11 +47,6 @@
     "typescript-eslint": "7.8.0"
   },
   "dependencies": {
-    "@arbitrum/token-bridge-contracts": "1.2.3",
-    "@uniswap/v3-core": "1.0.1",
-    "@uniswap/v3-periphery": "1.4.4",
-    "@uniswap/sdk-core": "5.0.0",
-    "@uniswap/v3-sdk": "3.11.2",
     "bigdecimal.js": "1.3.1",
     "effect": "3.2.5",
     "jsbi": "3.2.5",
@@ -54,6 +54,7 @@
     "type-fest": "4.18.2"
   },
   "workspaces": [
+    "packages/jsbi-reimported",
     "packages/sol-artifacts",
     "packages/effect-crypto"
   ]
