--- a/packages/sol-artifacts/package.json
+++ b/packages/sol-artifacts/package.json
@@ -17,17 +17,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@arbitrum/token-bridge-contracts": "1.2.3",
     "@nomicfoundation/hardhat-ethers": "3.0.6",
     "@nomicfoundation/hardhat-toolbox": "5.0.0",
     "@openzeppelin/contracts": "5.0.2",
-    "@uniswap/v3-core": "1.0.1",
-    "@uniswap/v3-periphery": "1.4.4",
     "effect": "3.2.5",
     "ethers": "6.12.1",
     "hardhat": "2.22.8",
     "hardhat-tracer": "3.1.0",
     "jsbi": "3.2.5",
     "type-fest": "4.18.2"
+  },
+  "devDependencies": {
+    "@arbitrum/token-bridge-contracts": "1.2.3",
+    "@uniswap/v3-core": "1.0.1",
+    "@uniswap/v3-periphery": "1.4.4"
   }
 }
