green tests for the position draft

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     },
     {
       "path": "packages/effect-crypto"
+    },
+    {
+      "path": "packages/effect-crypto-uniswap"
     }
   ]
 }
