--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "workspaces": [
     "packages/jsbi-reimported",
     "packages/sol-artifacts",
-    "packages/effect-crypto"
+    "packages/effect-crypto",
+    "packages/effect-crypto-uniswap"
   ]
 }
