Add codestyle fix script and project guidelines
- Introduced a new script `codestyle:fix` in `package.json` to automatically format code using Prettier.
- Added `effect-crypto.mdc` file detailing project rules, structure, and development workflow for the Effect Crypto project.
- Created `guidelines.md` to provide an overview of the project, its structure, technical stack, and testing instructions.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc --build",
     "codestyle": "prettier --check \"packages/**/*.{ts,tsx}\"",
+    "codestyle:fix": "prettier --check \"packages/**/*.{ts,tsx}\" --write",
     "lint": "eslint \"packages/**/*.{ts,tsx}\" --format stylish",
     "start": "npx tsx src/index.ts",
     "start-node": "npx hardhat node --fork https://arbitrum-mainnet.infura.io/v3/f89c7e42fab643f39c457ceeb4d63acd",
