Update package dependencies and TypeScript configuration
- Added `@effect/language-service` version 0.5.1 to both `package.json` and `package-lock.json` for improved TypeScript support.
- Included `packages/effect-crypto-uniswap` in the workspaces of `package-lock.json` to ensure proper module resolution.
- Changed TypeScript module setting from `node16` to `NodeNext` in `tsconfig.base.json` to align with the latest module resolution strategy.
- Updated `tsconfig.json` to include the `@effect/language-service` plugin for enhanced language features.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ava/typescript": "5.0.0",
     "@arbitrum/token-bridge-contracts": "1.2.3",
     "@effect/eslint-plugin": "0.2.0",
+    "@effect/language-service": "0.5.1",
     "@eslint/js": "9.2.0",
     "@fast-check/ava": "1.2.1",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
