- Added the `@effect/language-service`

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -143,7 +143,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true
+    "skipLibCheck": true,
     /* Skip type checking all .d.ts files. */
+    "plugins": [
+      { "name": "@effect/language-service" }
+    ]
   }
 }
