--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc --build",
     "codestyle": "prettier --check \"packages/**/*.{ts,tsx}\"",
+    "codestyle:fix": "prettier --check \"packages/**/*.{ts,tsx}\" --write",
     "lint": "eslint \"packages/**/*.{ts,tsx}\" --format stylish",
     "start": "npx tsx src/index.ts",
     "start-node": "npx hardhat node --fork https://arbitrum-mainnet.infura.io/v3/f89c7e42fab643f39c457ceeb4d63acd",
@@ -22,6 +23,7 @@
     "@ava/typescript": "5.0.0",
     "@arbitrum/token-bridge-contracts": "1.2.3",
     "@effect/eslint-plugin": "0.2.0",
+    "@effect/language-service": "0.5.1",
     "@eslint/js": "9.2.0",
     "@fast-check/ava": "1.2.1",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
