--- a/packages/effect-crypto-uniswap/package.json
+++ b/packages/effect-crypto-uniswap/package.json
@@ -20,15 +20,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@liquidity_lab/sol-artifacts": "workspace:*",
-    "@liquidity_lab/effect-crypto": "workspace:*",
+    "@liquidity_lab/sol-artifacts": "*",
+    "@liquidity_lab/effect-crypto": "*",
     "bigdecimal.js": "1.3.1",
     "effect": "3.2.5",
     "ethers": "6.12.1",
     "type-fest": "4.18.2"
   },
   "devDependencies": {
-    "@liquidity_lab/jsbi-reimported": "workspace:*",
+    "@liquidity_lab/jsbi-reimported": "*",
     "@uniswap/sdk-core": "5.0.0",
     "@uniswap/v3-sdk": "3.11.2",
     "@ava/typescript": "5.0.0",
