fix lint & codestyle issues

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@ava/typescript": "5.0.0",
     "@arbitrum/token-bridge-contracts": "1.2.3",
+    "@ava/typescript": "5.0.0",
     "@effect/eslint-plugin": "0.2.0",
     "@effect/language-service": "0.5.1",
     "@eslint/js": "9.2.0",
     "@fast-check/ava": "1.2.1",
-    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/node22": "22.0.0",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.11",
@@ -41,7 +41,7 @@
     "eslint-config-prettier": "10.0.1",
     "fast-check": "3.19.0",
     "jest": "29.7.0",
-    "prettier": "3.3.3",
+    "prettier": "3.5.3",
     "ts-jest": "29.1.4",
     "tslib": "2.6.2",
     "tsx": "4.9.3",
