--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "tslib": "2.8.1",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.32.1"
+    "typescript-eslint": "8.32.1",
+    "vitest": "3.1.3"
   },
   "dependencies": {
     "bigdecimal.js": "1.3.1",
