--- a/packages/effect-crypto/package.json
+++ b/packages/effect-crypto/package.json
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "test": "npx ava --timeout 2m"
+    "test": "npx ava --timeout 2m && npm run test:types",
+    "test:types": "vitest --typecheck.only --watch=false"
   },
   "author": "",
   "license": "ISC",
@@ -44,15 +45,16 @@
     "type-fest": "4.18.2"
   },
   "devDependencies": {
-    "@uniswap/sdk-core": "5.0.0",
-    "@uniswap/v3-periphery": "1.4.4",
     "@ava/typescript": "5.0.0",
     "@fast-check/ava": "1.2.1",
     "@tsconfig/node22": "22.0.1",
+    "@uniswap/sdk-core": "5.0.0",
+    "@uniswap/v3-periphery": "1.4.4",
     "ava": "6.1.3",
     "tsx": "4.19.4",
     "tslib": "2.8.1",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vitest": "3.1.3"
   },
   "description": ""
 }
