--- a/packages/effect-crypto/tsconfig.json
+++ b/packages/effect-crypto/tsconfig.json
@@ -8,7 +8,8 @@
   "exclude": [
     "node_modules/**/*",
     "dist/**/*",
-    "src/**/*.compileerror.spec.ts"
+    "src/**/*.compileerror.spec.ts",
+    "src/**/*.test-d.ts"
   ],
   "compilerOptions": {
     "rootDir": "./src",
