--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "optionalDependencies": {
+    "@nomicfoundation/solidity-analyzer-linux-x64-gnu": "0.1.2",
+    "@rollup/rollup-linux-x64-gnu": "4.40.2"
+  },
   "devDependencies": {
     "@ava/typescript": "5.0.0",
     "@arbitrum/token-bridge-contracts": "1.2.3",
@@ -46,7 +50,8 @@
     "tslib": "2.8.1",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.32.1"
+    "typescript-eslint": "8.32.1",
+    "vitest": "3.1.3"
   },
   "dependencies": {
     "bigdecimal.js": "1.3.1",
